Switch from Java 8 to Java 17.
Now we get to use text blocks among other shiny new features!